--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
     width: 100%;
 
 }
+.hide{
+    display: none;
+}
 .ettor{
     font-size: 46px;
     color: goldenrod;
@@ -47,21 +50,28 @@ margin-left: 40%;
 let tvåor="https://cloud.timeedit.net/abbindustrigymnasium/web/public1/ri.html?h=f&sid=3&p=0.m%2C0.w&objects=2990.8&ox=0&types=0&fe=0&hsid=t&h2=2";
 let ettor= "https://cloud.timeedit.net/abbindustrigymnasium/web/public1/ri.html?h=f&sid=3&p=0.m%2C0.w&objects=2970.8&ox=0&types=0&fe=0&cs=f&h2=2";
 window.onload = bytbild();
-
+let one=true;
 
 
 
 function bytbild() {
 
 setInterval(function(){
-     let frame= document.getElementById("inlineFrame");    
+     let ettor= document.getElementById("ettor");   
+     let tvåor= document.getElementById("tvåor");   
       let klass= document.getElementById("klass");
-     if (frame.src==ettor) {
-         frame.src= tvåor;
+     if (one) {
+        //  frame.src= tvåor;
+        tvåor.className = "hide";
+        ettor.className = "";
+        one= false;
          klass.innerHTML= "Schema för <span class='tvåor'>180S</span> <span class='tillfällig'>Tillfällig sida tills någon gör en bättre!</span>";
      } 
      else {
-        frame.src= ettor;  
+        // frame.src= ettor; 
+        tvåor.className = "";
+        ettor.className = "hide"; 
+        one=true;
         klass.innerHTML= "Schema för <span class='ettor'>190S</span>   <span class='tillfällig'>Tillfällig sida tills någon gör en bättre!</span>";
         
      }
@@ -74,7 +84,16 @@ scrolling="no">
 
 
     <h1 id="klass">Schema för <span class='tvåor'>180S</span></h1>
-    <iframe id="inlineFrame"
+    <iframe id="ettor"
+    class="hide"
+    title="Inline Frame"
+    width="100%"
+    height="700"
+    scrolling="no"
+    src="https://cloud.timeedit.net/abbindustrigymnasium/web/public1/ri.html?h=f&sid=3&p=0.m%2C0.w&objects=2970.8&ox=0&types=0&fe=0&cs=f&h2=2">
+</iframe>
+
+    <iframe id="tvåor"
     title="Inline Frame"
     width="100%"
     height="700"
