--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@ setInterval(function(){
      let ettor= document.getElementById("ettor");   
      let tvåor= document.getElementById("tvåor");   
       let klass= document.getElementById("klass");
+      
      if (one) {
         //  frame.src= tvåor;
         tvåor.className = "hide";
@@ -79,6 +80,16 @@ setInterval(function(){
 
      }
       }, 10000);
+      setInterval(function(){ // Updatera sidan en gång om dygnet.
+     let ettor= document.getElementById("ettor");   
+     let tvåor= document.getElementById("tvåor");   
+     tvåor.src= "https://cloud.timeedit.net/abbindustrigymnasium/web/public1/ri.html?h=f&sid=3&p=0.m%2C0.w&objects=2990.8&ox=0&types=0&fe=0&hsid=t&h2=2";
+     ettor.src= "https://cloud.timeedit.net/abbindustrigymnasium/web/public1/ri.html?h=f&sid=3&p=0.m%2C0.w&objects=2970.8&ox=0&types=0&fe=0&cs=f&h2=2";
+
+      }, 86400000);
+
+      
+
 }
     </script>
 </head>
@@ -91,7 +102,7 @@ scrolling="no">
     class="hide"
     title="Inline Frame"
     width="100%"
-    height="700"
+    height="800"
     scrolling="no"
     src="https://cloud.timeedit.net/abbindustrigymnasium/web/public1/ri.html?h=f&sid=3&p=0.m%2C0.w&objects=2970.8&ox=0&types=0&fe=0&cs=f&h2=2">
 </iframe>
@@ -99,7 +110,7 @@ scrolling="no">
     <iframe id="tvåor"
     title="Inline Frame"
     width="100%"
-    height="700"
+    height="800"
     scrolling="no"
     src="https://cloud.timeedit.net/abbindustrigymnasium/web/public1/ri.html?h=f&sid=3&p=0.m%2C0.w&objects=2990.8&ox=0&types=0&fe=0&hsid=t&h2=2">
 </iframe>
