--- a/index.html
+++ b/index.html
@@ -83,9 +83,11 @@ setInterval(function(){
       setInterval(function(){ // Updatera sidan en gång om dygnet.
      let ettor= document.getElementById("ettor");   
      let tvåor= document.getElementById("tvåor");   
-     tvåor.src= "https://cloud.timeedit.net/abbindustrigymnasium/web/public1/ri.html?h=f&sid=3&p=0.m%2C0.w&objects=2990.8&ox=0&types=0&fe=0&hsid=t&h2=2";
-     ettor.src= "https://cloud.timeedit.net/abbindustrigymnasium/web/public1/ri.html?h=f&sid=3&p=0.m%2C0.w&objects=2970.8&ox=0&types=0&fe=0&cs=f&h2=2";
-
+    //  tvåor.src= "";
+    //  ettor.src= "";
+    //  tvåor.src= "https://cloud.timeedit.net/abbindustrigymnasium/web/public1/ri.html?h=f&sid=3&p=0.m%2C0.w&objects=2990.8&ox=0&types=0&fe=0&hsid=t&h2=2";
+    //  ettor.src= "https://cloud.timeedit.net/abbindustrigymnasium/web/public1/ri.html?h=f&sid=3&p=0.m%2C0.w&objects=2970.8&ox=0&types=0&fe=0&cs=f&h2=2";
+    window.location.reload(false); 
       }, 86400000);
 
       
