--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ title="Inline Frame"
 width="100%"
 height="800"
 scrolling="no"
-src="http://outlook.office365.com/owa/calendar/15b55814a3394d5282d6d3b100241004@abbindustrigymnasium.se/757180140a744d5b987b02de0feae27f15809010834951526728/calendar.html">
+src="https://outlook.office365.com/owa/calendar/15b55814a3394d5282d6d3b100241004@abbindustrigymnasium.se/757180140a744d5b987b02de0feae27f15809010834951526728/calendar.html">
 </iframe>
 
 
