--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 
         <div class=".box">
             <div id="coverDiv"><h1 id="time"></h1><p id="timeEditInfo"></p></div>
-            <iframe scrolling='no' id="timeEditIFrame" src="" width="100%" height="100%" frameborder="0"></iframe>
+            <iframe scrolling='no' class="timeEditIFrame" id="180sFrame" src="https://cloud.timeedit.net/abbindustrigymnasium/web/public1/ri1Y7X3QQQfZY6QfZ5064405y7Y7.html" width="100%" height="100%" frameborder="0"></iframe>
+            <iframe scrolling='no' class="timeEditIFrame" id="190sFrame" src="https://cloud.timeedit.net/abbindustrigymnasium/web/public1/ri1Y7X3QQQfZY6QfZ5064205y7Y7.html" width="100%" height="100%" frameborder="0"></iframe>
         </div>
     
         <div class="box" id="190s">
