--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <script src="script.js"></script>
+    <script src="lessons.js"></script>
+    <script src="cleaning.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
@@ -21,10 +22,15 @@
         <!-- <div class="box" id="time">
         </div> -->
 
-        <div class=".box">
+        <div id="iframe">
             <div id="coverDiv"><h1 id="time"></h1><p id="timeEditInfo"></p></div>
             <iframe scrolling='no' class="timeEditIFrame" id="180sFrame" src="https://cloud.timeedit.net/abbindustrigymnasium/web/public1/ri1Y7X3QQQfZY6QfZ5064405y7Y7.html" width="100%" height="80%" frameborder="0"></iframe>
             <iframe scrolling='no' class="timeEditIFrame" id="190sFrame" src="https://cloud.timeedit.net/abbindustrigymnasium/web/public1/ri1Y7X3QQQfZY6QfZ5064205y7Y7.html" width="100%" height="80%" frameborder="0"></iframe>
+            
+        </div>
+
+        <div id="food">
+
         </div>
     
         <div class="box" id="190s">
